[gd_scene load_steps=4 format=3 uid="uid://bndockh6ut31f"]

[ext_resource type="Theme" uid="uid://cmkvf640kg8dk" path="res://Themes/Budget_page.tres" id="1_ckmd0"]
[ext_resource type="StyleBox" uid="uid://sw10bioqdv36" path="res://Themes/Panel/Panel Edit Budget Page.tres" id="2_nd5qg"]
[ext_resource type="Script" path="res://Scene/charting.gd" id="3_raqij"]

[node name="Charting" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ckmd0")
theme_override_styles/panel = ExtResource("2_nd5qg")
script = ExtResource("3_raqij")

[node name="Total Percentages" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -20.0
offset_right = 976.0
offset_bottom = 680.0
grow_vertical = 2

[node name="SavingsPercent" type="Label" parent="Total Percentages"]
layout_mode = 2
text = "Expenses"

[node name="Expenses" type="ProgressBar" parent="Total Percentages"]
layout_mode = 2
rounded = true

[node name="ExpensesPercent" type="Label" parent="Total Percentages"]
layout_mode = 2
text = "Savings"

[node name="Savings" type="ProgressBar" parent="Total Percentages"]
layout_mode = 2
rounded = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 145.0
offset_right = 968.0
offset_bottom = 832.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Totals"

[node name="Totals" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Income" type="Label" parent="VBoxContainer/Totals"]
layout_mode = 2
size_flags_horizontal = 3
text = "Income"

[node name="IncValue" type="Label" parent="VBoxContainer/Totals"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Expenses" type="Label" parent="VBoxContainer/Totals"]
layout_mode = 2
size_flags_horizontal = 3
text = "Expenses"

[node name="ExpValue" type="Label" parent="VBoxContainer/Totals"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Savings" type="Label" parent="VBoxContainer/Totals"]
layout_mode = 2
size_flags_horizontal = 3
text = "Savings"

[node name="SavValue" type="Label" parent="VBoxContainer/Totals"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -227.0
offset_top = -211.0
offset_right = 227.0
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 0

[node name="Back" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_back_pressed"]
